--- a/libmudflap/Makefile.am
+++ b/libmudflap/Makefile.am
@@ -12,12 +12,12 @@ TESTS_ENVIRONMENT = LD_LIBRARY_PATH='.libs:../../gcc' MUDFLAP_OPTIONS='-mode-che
 TESTS = test/fail1.x test/fail2.x test/fail3.x test/fail4.x test/fail5.x \
  test/fail6.x test/fail7.x test/fail8.x test/fail9.x test/fail10.x \
  test/fail11.x test/fail12.x test/fail13.x test/fail14.x test/fail15.x \
- test/fail16.x test/fail17.x test/fail18.x \
+ test/fail16.x test/fail17.x test/fail18.x test/fail19.x \
  test/pass1.x test/pass2.x test/pass3.x test/pass4.x test/pass5.x \
  test/pass6.x test/pass7.x test/pass8.x test/pass9.x test/pass10.x \
  test/pass11.x test/pass12.x test/pass13.x test/pass14.x test/pass15.x \
  test/pass16.x test/pass17.x test/pass18.x test/pass19.x test/pass20.x \
- test/pass21.x test/pass22.x test/pass23.x
+ test/pass21.x test/pass22.x test/pass23.x test/pass24.x test/pass-stratcliff.x
 
 test/%.c: test/%-frag.c test/mf-driver.c
 	@mkdir -p test
@@ -52,9 +52,10 @@ clean-tests:
 
 # Cross compiler and multilib support.
 lib_LTLIBRARIES = libmudflap.la
+include_HEADERS = mf-runtime.h
 
 CFLAGS = -O2 -g -freorder-blocks
-AM_CFLAGS = -fno-builtin -fno-builtin-alloca -ansi -Wall -D__NO_STRING_INLINES
+AM_CFLAGS = -ansi -Wall
 
 # Use common includes from acinclude.m4/LIBMUDFLAP_EXPORT_INCLUDES
 LIBMUDFLAP_INCLUDES =
