--- a/libmudflap/Makefile.in
+++ b/libmudflap/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -85,7 +85,15 @@ MAINT_CHARSET = latin1
 
 TESTS_ENVIRONMENT = LD_LIBRARY_PATH='.libs:../../gcc' MUDFLAP_OPTIONS='-mode-check -viol-abort -no-heur-proc-map'
 
-TESTS = test/fail1.x test/fail2.x test/fail3.x test/fail4.x test/fail5.x  test/fail6.x test/fail7.x test/fail8.x test/fail9.x test/fail10.x  test/fail11.x test/fail12.x test/fail13.x test/fail14.x test/fail15.x  test/fail16.x test/fail17.x test/fail18.x  test/pass1.x test/pass2.x test/pass3.x test/pass4.x test/pass5.x  test/pass6.x test/pass7.x test/pass8.x test/pass9.x test/pass10.x  test/pass11.x test/pass12.x test/pass13.x test/pass14.x test/pass15.x  test/pass16.x test/pass17.x test/pass18.x test/pass19.x test/pass20.x  test/pass21.x test/pass22.x test/pass23.x
+TESTS = test/fail1.x test/fail2.x test/fail3.x test/fail4.x test/fail5.x \
+ test/fail6.x test/fail7.x test/fail8.x test/fail9.x test/fail10.x \
+ test/fail11.x test/fail12.x test/fail13.x test/fail14.x test/fail15.x \
+ test/fail16.x test/fail17.x test/fail18.x test/fail19.x \
+ test/pass1.x test/pass2.x test/pass3.x test/pass4.x test/pass5.x \
+ test/pass6.x test/pass7.x test/pass8.x test/pass9.x test/pass10.x \
+ test/pass11.x test/pass12.x test/pass13.x test/pass14.x test/pass15.x \
+ test/pass16.x test/pass17.x test/pass18.x test/pass19.x test/pass20.x \
+ test/pass21.x test/pass22.x test/pass23.x test/pass24.x test/pass-stratcliff.x
 
 
 # Various possibilities
@@ -96,18 +104,56 @@ TESTFLAGS = -rdynamic
 
 # Cross compiler and multilib support.
 lib_LTLIBRARIES = libmudflap.la
+include_HEADERS = mf-runtime.h
 
 CFLAGS = -O2 -g -freorder-blocks
-AM_CFLAGS = -fno-builtin -fno-builtin-alloca -ansi -Wall -D__NO_STRING_INLINES
+AM_CFLAGS = -ansi -Wall
 
 # Use common includes from acinclude.m4/LIBMUDFLAP_EXPORT_INCLUDES
 LIBMUDFLAP_INCLUDES = 
 TOPLEVEL_INCLUDES = 
 
-libmudflap_la_SOURCES =  	mf-runtime.c 	mf-heuristics.c
+libmudflap_la_SOURCES = \
+	mf-runtime.c \
+	mf-heuristics.c
 
 
-HOOKOBJS =   malloc-hook.lo  free-hook.lo  calloc-hook.lo  realloc-hook.lo  memcpy-hook.lo  memmove-hook.lo  memset-hook.lo  memcmp-hook.lo  memchr-hook.lo  memrchr-hook.lo  strcpy-hook.lo  strncpy-hook.lo  strcat-hook.lo  strncat-hook.lo  strcmp-hook.lo  strcasecmp-hook.lo  strncmp-hook.lo  strncasecmp-hook.lo  strdup-hook.lo  strndup-hook.lo  strchr-hook.lo  strrchr-hook.lo  strstr-hook.lo  memmem-hook.lo  strlen-hook.lo  strnlen-hook.lo  bzero-hook.lo  bcopy-hook.lo  bcmp-hook.lo  index-hook.lo  rindex-hook.lo  dlopen-hook.lo  mmap-hook.lo  munmap-hook.lo  alloca-hook.lo
+HOOKOBJS = \
+ malloc-hook.lo \
+ free-hook.lo \
+ calloc-hook.lo \
+ realloc-hook.lo \
+ memcpy-hook.lo \
+ memmove-hook.lo \
+ memset-hook.lo \
+ memcmp-hook.lo \
+ memchr-hook.lo \
+ memrchr-hook.lo \
+ strcpy-hook.lo \
+ strncpy-hook.lo \
+ strcat-hook.lo \
+ strncat-hook.lo \
+ strcmp-hook.lo \
+ strcasecmp-hook.lo \
+ strncmp-hook.lo \
+ strncasecmp-hook.lo \
+ strdup-hook.lo \
+ strndup-hook.lo \
+ strchr-hook.lo \
+ strrchr-hook.lo \
+ strstr-hook.lo \
+ memmem-hook.lo \
+ strlen-hook.lo \
+ strnlen-hook.lo \
+ bzero-hook.lo \
+ bcopy-hook.lo \
+ bcmp-hook.lo \
+ index-hook.lo \
+ rindex-hook.lo \
+ dlopen-hook.lo \
+ mmap-hook.lo \
+ munmap-hook.lo \
+ alloca-hook.lo
 
 
 libmudflap_la_LDFLAGS = 
@@ -129,6 +175,8 @@ COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CF
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(LIBTOOL) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
+HEADERS =  $(include_HEADERS)
+
 DIST_COMMON =  ./stamp-h.in ChangeLog Makefile.am Makefile.in aclocal.m4 \
 config.h.in configure configure.in
 
@@ -252,6 +300,21 @@ maintainer-clean-libtool:
 libmudflap.la: $(libmudflap_la_OBJECTS) $(libmudflap_la_DEPENDENCIES)
 	$(LINK) -rpath $(libdir) $(libmudflap_la_LDFLAGS) $(libmudflap_la_OBJECTS) $(libmudflap_la_LIBADD) $(LIBS)
 
+install-includeHEADERS: $(include_HEADERS)
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(includedir)
+	@list='$(include_HEADERS)'; for p in $$list; do \
+	  if test -f "$$p"; then d= ; else d="$(srcdir)/"; fi; \
+	  echo " $(INSTALL_DATA) $$d$$p $(DESTDIR)$(includedir)/$$p"; \
+	  $(INSTALL_DATA) $$d$$p $(DESTDIR)$(includedir)/$$p; \
+	done
+
+uninstall-includeHEADERS:
+	@$(NORMAL_UNINSTALL)
+	list='$(include_HEADERS)'; for p in $$list; do \
+	  rm -f $(DESTDIR)$(includedir)/$$p; \
+	done
+
 tags: TAGS
 
 ID: $(HEADERS) $(SOURCES) $(LISP)
@@ -371,20 +434,20 @@ all-recursive-am: config.h
 install-exec-am: install-libLTLIBRARIES
 install-exec: install-exec-am
 
-install-data-am:
+install-data-am: install-includeHEADERS
 install-data: install-data-am
 
 install-am: all-am
 	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
 install: install-am
-uninstall-am: uninstall-libLTLIBRARIES
+uninstall-am: uninstall-libLTLIBRARIES uninstall-includeHEADERS
 uninstall: uninstall-am
-all-am: Makefile $(LTLIBRARIES) config.h
+all-am: Makefile $(LTLIBRARIES) $(HEADERS) config.h
 all-redirect: all-am
 install-strip:
 	$(MAKE) $(AM_MAKEFLAGS) AM_INSTALL_PROGRAM_FLAGS=-s install
 installdirs:
-	$(mkinstalldirs)  $(DESTDIR)$(libdir)
+	$(mkinstalldirs)  $(DESTDIR)$(libdir) $(DESTDIR)$(includedir)
 
 
 mostlyclean-generic:
@@ -432,14 +495,15 @@ clean-libLTLIBRARIES maintainer-clean-libLTLIBRARIES \
 uninstall-libLTLIBRARIES install-libLTLIBRARIES mostlyclean-compile \
 distclean-compile clean-compile maintainer-clean-compile \
 mostlyclean-libtool distclean-libtool clean-libtool \
-maintainer-clean-libtool tags mostlyclean-tags distclean-tags \
-clean-tags maintainer-clean-tags distdir check-TESTS info-am info \
-dvi-am dvi check check-am installcheck-am installcheck install-info-am \
-install-info all-recursive-am install-exec-am install-exec \
-install-data-am install-data install-am install uninstall-am uninstall \
-all-redirect all-am all installdirs mostlyclean-generic \
-distclean-generic clean-generic maintainer-clean-generic clean \
-mostlyclean distclean maintainer-clean
+maintainer-clean-libtool uninstall-includeHEADERS \
+install-includeHEADERS tags mostlyclean-tags distclean-tags clean-tags \
+maintainer-clean-tags distdir check-TESTS info-am info dvi-am dvi check \
+check-am installcheck-am installcheck install-info-am install-info \
+all-recursive-am install-exec-am install-exec install-data-am \
+install-data install-am install uninstall-am uninstall all-redirect \
+all-am all installdirs mostlyclean-generic distclean-generic \
+clean-generic maintainer-clean-generic clean mostlyclean distclean \
+maintainer-clean
 
 
 test/%.c: test/%-frag.c test/mf-driver.c
