--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -582,7 +582,8 @@ C_TREE_H = c-tree.h $(C_COMMON_H)
 SYSTEM_H = system.h hwint.h $(srcdir)/../include/libiberty.h
 PREDICT_H = predict.h predict.def
 CPPLIB_H = cpplib.h line-map.h
-TREE_FLOW_H = tree-flow.h tree-flow-inline.h
+TREE_FLOW_H = tree-flow.h tree-flow-inline.h bitmap.h $(BASIC_BLOCK_H) \
+              hard-reg-set.h tree-simple.h
 
 # sed inserts variable overrides after the following line.
 ####target overrides
@@ -727,12 +728,7 @@ CXX_TARGET_OBJS=@cxx_target_objs@
 C_AND_OBJC_OBJS = attribs.o c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
   c-convert.o c-aux-info.o c-common.o c-opts.o c-format.o c-semantics.o \
   c-objc-common.o c-dump.o libcpp.a $(C_TARGET_OBJS) \
-  tree-cfg.o tree-dfa.o tree-ssa.o tree-optimize.o \
-  c-simplify.o c-call-graph.o tree-simple.o simple-break-elim.o \
-  simple-goto-elim.o tree-dchain.o tree-ssa-pre.o tree-alias-type.o \
-  tree-mudflap.o gimplify.o \
-  tree-alias-ecr.o tree-alias-common.o tree-alias-steen.o \
-  disjoint-set.o tree-ssa-ccp.o tree-ssa-dce.o
+  c-simplify.o c-call-graph.o
 
 # Language-specific object files for C.
 C_OBJS = c-parse.o c-lang.o c-pretty-print.o $(C_AND_OBJC_OBJS)
@@ -757,7 +753,11 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	   \
  sibcall.o simplify-rtx.o ssa.o ssa-ccp.o ssa-dce.o stmt.o		   \
  stor-layout.o stringpool.o timevar.o toplev.o tracer.o tree.o tree-dump.o \
  tree-inline.o unroll.o varasm.o varray.o version.o vmsdbgout.o xcoffout.o \
- tree-nomudflap.o \
+ tree-nomudflap.o tree-pretty-print.o tree-cfg.o tree-dfa.o tree-ssa.o     \
+ tree-optimize.o tree-simple.o simple-break-elim.o simple-goto-elim.o      \
+ tree-dchain.o tree-ssa-pre.o tree-alias-type.o tree-mudflap.o gimplify.o  \
+ tree-alias-ecr.o tree-alias-common.o tree-alias-steen.o disjoint-set.o    \
+ tree-ssa-ccp.o tree-ssa-dce.o                                             \
  et-forest.o $(GGC) $(out_object_file) $(EXTRA_OBJS)
 
 BACKEND = main.o libbackend.a
@@ -1381,32 +1381,31 @@ disjoint-set.o: disjoint-set.c disjoint-set.h $(SYSTEM_H) $(CONFIG_H) $(GGC_H)
 tree-alias-ecr.o: tree-alias-ecr.c tree-alias-ecr.h disjoint-set.h tree-alias-type.h  $(SYSTEM_H) $(CONFIG_H) $(GGC_H)
 tree-alias-type.o: tree-alias-type.c tree-alias-type.h $(SYSTEM_H) $(CONFIG_H) $(GGC_H) gt-tree-alias-type.h
 tree-alias-steen.o: tree-alias-steen.c tree-alias-steen.h $(SYSTEM_H) \
-	$(CONFIG_H) $(GGC_H) $(TREE_H) $(TREE_FLOW_H)  $(C_COMMON_H)
+	$(CONFIG_H) $(GGC_H) $(TREE_H) $(TREE_FLOW_H)
 tree-alias-common.o: tree-alias-common.c tree-alias-common.h $(SYSTEM_H) \
-	$(CONFIG_H) $(GGC_H) $(TREE_H) gt-tree-alias-common.h $(TREE_FLOW_H) \
-	$(C_COMMON_H)
+	$(CONFIG_H) $(GGC_H) $(TREE_H) gt-tree-alias-common.h $(TREE_FLOW_H)
 tree-ssa.o : tree-ssa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
-   $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
-   $(GGC_H) output.h diagnostic.h ssa.h errors.h toplev.h ggc.h tree-simple.h
+   $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
+   $(GGC_H) output.h diagnostic.h ssa.h errors.h toplev.h
 tree-ssa-pre.o : tree-ssa-pre.c $(TREE_FLOW_H) $(CONFIG_H) \
-   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
-   $(C_COMMON_H) $(GGC_H) output.h diagnostic.h ssa.h errors.h toplev.h
+   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
+   $(GGC_H) output.h diagnostic.h ssa.h errors.h toplev.h
 tree-cfg.o : tree-cfg.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
-   $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
-   $(GGC_H) flags.h output.h diagnostic.h errors.h
+   $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) flags.h output.h \
+   diagnostic.h errors.h
 tree-dfa.o : tree-dfa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
-   $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
-   $(GGC_H) output.h diagnostic.h errors.h $(C_TREE_H) tree-simple.h \
-   tree-inline.h $(HASHTAB_H) flags.h
+   $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
+   errors.h tree-inline.h $(HASHTAB_H) flags.h
 tree-optimize.o : tree-optimize.c $(TREE_FLOW_H) $(CONFIG_H) \
-   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(BASIC_BLOCK_H) $(EXPR_H) \
+   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
    $(GGC_H) output.h diagnostic.h ssa.h errors.h flags.h tree-alias-common.h \
-   tree-dchain.h $(C_COMMON_H) $(C_TREE_H)
+   tree-dchain.h
 c-simplify.o : c-simplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h tree-simple.h varray.h flags.h \
-   langhooks.h toplev.h rtl.h $(TREE_FLOW_H) $(BASIC_BLOCK_H) langhooks-def.h
+   langhooks.h toplev.h rtl.h $(TREE_FLOW_H) langhooks-def.h
 gimplify.o : gimplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
-   diagnostic.h tree-simple.h tree-inline.h varray.h langhooks.h langhooks-def.h
+   diagnostic.h tree-simple.h tree-inline.h varray.h langhooks.h \
+   langhooks-def.h $(TREE_FLOW_H)
 simple-break-elim.o : simple-break-elim.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h tree-dchain.h
 simple-goto-elim.o : simple-goto-elim.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
@@ -1423,6 +1422,8 @@ tree-mudflap.o : $(CONFIG_H) errors.h $(SYSTEM_H) $(TREE_H) tree-inline.h \
 tree-nomudflap.o : $(CONFIG_H) errors.h $(SYSTEM_H) $(TREE_H) tree-inline.h \
    $(C_TREE_H) $(C_COMMON_H) tree-simple.h diagnostic.h $(HASHTAB_H) \
    output.h varray.h langhooks.h tree-mudflap.h
+tree-pretty-print.o : tree-pretty-print.c $(CONFIG_H) $(SYSTEM_H) \
+   errors.h $(TREE_H) diagnostic.h real.h $(HASHTAB_H)
 c-pretty-print.o : c-pretty-print.c $(CONFIG_H) $(SYSTEM_H) $(HASHTAB_H) \
    $(RTL_H) $(TREE_H) $(EXPR_H) $(C_COMMON_H) errors.h diagnostic.h
 stor-layout.o : stor-layout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h \
@@ -1556,15 +1557,12 @@ ssa.o : ssa.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(REGS_H) varray.h $(EXPR_H) \
 ssa-dce.o : ssa-dce.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) hard-reg-set.h \
    $(BASIC_BLOCK_H) ssa.h insn-config.h $(RECOG_H) output.h
 tree-ssa-dce.o : tree-ssa-dce.c $(CONFIG_H) system.h errors.h $(TREE_H) \
-    $(RTL_H) $(TM_P_H) hard-reg-set.h $(BASIC_BLOCK_H) \
-    $(TREE_FLOW_H) $(C_COMMON_H) $(C_TREE_H) diagnostic.h
+    $(RTL_H) $(TM_P_H) $(TREE_FLOW_H) diagnostic.h
 ssa-ccp.o : ssa-ccp.c $(CONFIG_H) system.h $(RTL_H) hard-reg-set.h \
     $(BASIC_BLOCK_H) ssa.h insn-config.h $(RECOG_H) output.h \
     errors.h $(GGC_H) df.h function.h
 tree-ssa-ccp.o : tree-ssa-ccp.c $(CONFIG_H) system.h errors.h $(TREE_H) \
-    $(RTL_H) $(TM_P_H) hard-reg-set.h $(BASIC_BLOCK_H) \
-    $(TREE_FLOW_H) $(C_COMMON_H) $(C_TREE_H) tree-simple.h \
-    diagnostic.h
+    $(RTL_H) $(TM_P_H) $(TREE_FLOW_H) diagnostic.h
 df.o : df.c $(CONFIG_H) system.h $(RTL_H) insn-config.h $(RECOG_H) \
    function.h $(REGS_H) $(OBSTACK_H) hard-reg-set.h $(BASIC_BLOCK_H) df.h \
    $(FIBHEAP_H)
@@ -1916,6 +1914,7 @@ GTFILES = $(GCONFIG_H) $(srcdir)/location.h \
   $(srcdir)/disjoint-set.c \
   $(srcdir)/tree.c $(srcdir)/tree-mudflap.c $(srcdir)/varasm.c \
   $(srcdir)/c-objc-common.c $(srcdir)/c-common.c $(srcdir)/c-parse.in \
+  $(srcdir)/tree-flow.h \
   $(out_file) \
   @all_gtfiles@
 
