--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -79,11 +79,8 @@ g++-cross$(exeext): g++$(exeext)
 # The compiler itself.
 # Shared with C front end:
 CXX_C_OBJS = attribs.o c-common.o c-format.o c-pragma.o c-semantics.o c-lex.o \
- c-dump.o $(CXX_TARGET_OBJS) c-opts.o \
-  tree-cfg.o tree-dfa.o tree-optimize.o tree-ssa.o tree-ssa-pre.o \
-  c-simplify.o gimplify.o c-pretty-print.o tree-simple.o tree-alias-steen.o \
-  tree-alias-ecr.o tree-alias-type.o disjoint-set.o tree-ssa-ccp.o \
-  tree-dchain.o tree-alias-common.o tree-ssa-dce.o old-tree-inline.o
+ c-dump.o $(CXX_TARGET_OBJS) c-opts.o c-simplify.o c-pretty-print.o           \
+ old-tree-inline.o
 
 # Language-specific object files.
 CXX_OBJS = cp/call.o cp/decl.o cp/expr.o cp/pt.o cp/typeck2.o \
