--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -728,7 +728,7 @@ CXX_TARGET_OBJS=@cxx_target_objs@
 C_AND_OBJC_OBJS = attribs.o c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
   c-convert.o c-aux-info.o c-common.o c-opts.o c-format.o c-semantics.o \
   c-objc-common.o c-dump.o libcpp.a $(C_TARGET_OBJS) \
-  c-simplify.o c-call-graph.o
+  c-simplify.o c-call-graph.o tree-mudflap.o 
 
 # Language-specific object files for C.
 C_OBJS = c-parse.o c-lang.o c-pretty-print.o $(C_AND_OBJC_OBJS)
@@ -755,7 +755,7 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	   \
  tree-inline.o unroll.o varasm.o varray.o version.o vmsdbgout.o xcoffout.o \
  tree-nomudflap.o tree-pretty-print.o tree-cfg.o tree-dfa.o tree-ssa.o     \
  tree-optimize.o tree-simple.o simple-break-elim.o simple-goto-elim.o      \
- tree-dchain.o tree-ssa-pre.o tree-alias-type.o tree-mudflap.o gimplify.o  \
+ tree-dchain.o tree-ssa-pre.o tree-alias-type.o gimplify.o  \
  tree-alias-ecr.o tree-alias-common.o tree-alias-steen.o disjoint-set.o    \
  tree-ssa-ccp.o tree-ssa-dce.o                                             \
  et-forest.o $(GGC) $(out_object_file) $(EXTRA_OBJS)
