* Makefile.in (tree-pretty-print.o): Depend on $(TREE_FLOW_H) 	* basic-block.h (BB_COMPOUND_ENTRY): Rename from BB_CONTROL_ENTRY. 	* diagnostic.h (dump_generic_tree): Remove extern declaration. 	(print_generic_node_brief): Remove.  Update all users. 	(PPF_BRIEF): Declare. 	(PPF_BLOCK): Declare. 	(PPF_LINENO): Declare. 	(PPF_IS_STMT): Declare. 	* tree-pretty-print.c (PPF_BRIEF): New constant. 	(PPF_BLOCK): New constant. 	(PPF_LINENO): New constant. 	(PPF_IS_STMT): New constant. 	(dump_block_info): New local function. 	(last_bb): New local variable. 	(dump_generic_tree): Remove unused function. 	(print_generic_tree): Add third argument 'flags'.  Update all 	users. 	(print_generic_node_brief): Remove.  Update all users. 	(print_generic_node): Add third argument 'flags'.  Update all 	users. 	(dump_generic_node): Add third argument 'flags'.  Update all users. 	If PPF_BLOCK is set, display basic block information at basic block 	boundaries. 	If PPF_IS_STMT is set, change the way COMPOUND_EXPR nodes are 	rendered. 	If PPF_BRIEF is set, don't show the bodies of control statements. 	(print_declaration):
	* toplev.c (process_options): Update comment for -fdisable-simple.

	* tree-cfg.c (remove_tree_bb): Rename from tree_delete_bb.
	(latch_block): Move declaration to tree-flow.h.  Declare extern.
	(make_blocks): Start a new block after finding a control flow
	altering statement.
	(make_loop_expr_blocks): Set the loop entry block to be the parent
	block for the loop latch block.
	(cleanup_tree_cfg): Rename from tree_cleanup_cfg.
	Call compact_blocks.
	(remove_tree_bb): Rename from tree_delete_bb.  Update all users.
	(dump_tree_bb): Rename from dump_tree_bb.  Update all users.
	Dump information about loop latch blocks.
	(debug_tree_bb): Rename from tree_debug_bb.  Update all users.
	(debug_tree_cfg): Rename from tree_debug_cfg.  Update all users.
	(dump_tree_cfg): Rename from tree_dump_cfg.  Update all users.
	By default, dump the function with markers for basic block
	boundarie

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1428,7 +1428,7 @@ tree-nomudflap.o : $(CONFIG_H) errors.h $(SYSTEM_H) $(TREE_H) tree-inline.h \
    $(C_TREE_H) $(C_COMMON_H) tree-simple.h diagnostic.h $(HASHTAB_H) \
    output.h varray.h langhooks.h tree-mudflap.h
 tree-pretty-print.o : tree-pretty-print.c $(CONFIG_H) $(SYSTEM_H) \
-   errors.h $(TREE_H) diagnostic.h real.h $(HASHTAB_H)
+   errors.h $(TREE_H) diagnostic.h real.h $(HASHTAB_H) $(TREE_FLOW_H)
 c-pretty-print.o : c-pretty-print.c $(CONFIG_H) $(SYSTEM_H) $(HASHTAB_H) \
    $(RTL_H) $(TREE_H) $(EXPR_H) $(C_COMMON_H) errors.h diagnostic.h
 stor-layout.o : stor-layout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h \
