Whoops. Wrong version of aclocal was run
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@58754 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libbanshee/configure.in
+++ b/libbanshee/configure.in
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT(engine/flowrow-sort.c, 0.9, dberlin@dberlin.org)
 AM_INIT_AUTOMAKE(libbanshee, 0.9)
-AM_CONFIG_HEADER([config.h])
+AM_CONFIG_HEADER(config.h)
 
 # Checks for programs.
 AC_PROG_CC
