--- a/libmudflap/config.h.in
+++ b/libmudflap/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated automatically from configure.in by autoheader.  */
 
+/* Define if you have the <stdint.h> header file.  */
+#undef HAVE_STDINT_H
+
 /* Name of package */
 #undef PACKAGE
 
