2002-11-11  Nathanael Nerode  <neroden@gcc.gnu.org>
	* configure: Substitute more variables in a more autoconf-friendly
	way.  Simplify slightly.
	* Makefile.tpl: Make more variables substitutable in an
	autoconf-friendly way.
	* Makefile.in: Regenerate.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@59056 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/Makefile.in
+++ b/Makefile.in
@@ -26,6 +26,13 @@
 NOTPARALLEL = .NOTPARALLEL
 $(NOTPARALLEL):
 
+enable_shared = @enable_shared@
+enable_threads = @enable_threads@
+enable_version_specific_runtime_libs = @enable_version_specific_runtime_libs@
+# The file containing GCC's version number.
+gcc_version_trigger = @gcc_version_trigger@
+gcc_version = @gcc_version@
+
 srcdir = @srcdir@
 
 prefix = @prefix@
