Index: ChangeLog 2002-11-13  Geoffrey Keating  <geoffk@apple.com>
	* Makefile.in (GTFILES): Add cpplib.h.
	* c-common.h (struct c_common_identifier): Don't skip 'node' field.
	* c-decl.c (build_compound_literal): Don't use var_labelno.
	* cpplib.h (struct cpp_hashnode): Use gengtype to mark.
	* dwarf2asm.c (dw2_force_const_mem): Don't use const_labelno.
	* varasm.c (const_labelno): Use gengtype to mark.
	(var_labelno): Likewise.
	(in_section): Likewise.
	(in_named_name): Likewise.
	(struct in_named_entry): Likewise.
	(in_named_htab): Likewise.
	(set_named_section_flags): Use GGC to allocate struct in_named_entry.
	(init_varasm_once): Use GGC to allocate in_named_htab.
	* config/darwin.c (current_pic_label_num): Mark for PCH.

Index: testsuite/ChangeLog
2002-11-13  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/pch/pch.exp: Ensure that <test>.hp doesn't exist before
	running test.
	* gcc.dg/pch: Include *.hp not *.h.
	* gcc.dg/pch/system-1.h: New.
	* gcc.dg/pch/system-1.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/pch-branch@59106 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1838,7 +1838,7 @@ s-preds: genpreds$(build_exeext) $(srcdir)/move-if-change
 	$(STAMP) s-preds
 
 GTFILES = $(GCONFIG_H) \
-  $(HASHTAB_H) $(SPLAY_TREE_H) \
+  $(HASHTAB_H) $(SPLAY_TREE_H) $(srcdir)/cpplib.h \
   $(srcdir)/location.h $(srcdir)/bitmap.h $(srcdir)/function.h \
   $(srcdir)/rtl.h $(srcdir)/optabs.h $(srcdir)/tree.h $(srcdir)/libfuncs.h \
   $(srcdir)/hashtable.h $(srcdir)/real.h \
